--- a/frontend/src/styles/quasar.variables.scss
+++ b/frontend/src/styles/quasar.variables.scss
@@ -1,15 +1,15 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   : #2851BB;
-$secondary : #26A69A;
-$accent    : #122350;
+$primary: #2851bb;
+$secondary: #26a69a;
+$accent: #122350;
 
-$dark      : #424242;
+$dark: #424242;
 
-$positive  : #21BA45;
-$negative  : #dd1c1a;
-$info      : #26A69A;
-$warning   : #f7b05b;
+$positive: #21ba45;
+$negative: #dd1c1a;
+$info: #26a69a;
+$warning: #f7b05b;
 
-@import '~quasar-variables-styl';
+@import "~quasar-variables-styl";
